<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/endPreview"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:scaleType="centerCrop">


    <ImageView
        android:id="@+id/ivEnd"
        android:layout_width="300dp"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/firework" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/animals_end"
        android:textSize="19sp"
        android:textStyle="bold"
        android:fontFamily="@font/first_font"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLeft"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/btn_back_background"
            android:fontFamily="@font/first_font"
            android:text="@string/back"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRight"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:padding="10dp"
            android:background="@drawable/btn_back_background"
            android:fontFamily="@font/first_font"
            android:text="@string/continue_btn"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>