<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/play_game_field"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstLevel">

    <TextView
        android:id="@+id/tvLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/first_font"
        android:text="@string/first_level"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/pb_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLevelTitle" />

    <ImageView
        android:id="@+id/ivTask"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/badger" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/btnToBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTask"
        app:rowCount="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOne"
            android:layout_margin="8dp"
            android:background="@drawable/btn_ans_one"
            android:tag="0"
            android:onClick="onClickAnswer"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:fontFamily="@font/second_font"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTwo"
            android:layout_margin="8dp"
            android:background="@drawable/btn_ans_two"
            android:tag="1"
            android:onClick="onClickAnswer"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:fontFamily="@font/second_font"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThree"
            android:layout_margin="8dp"
            android:background="@drawable/btn_ans_three"
            android:tag="2"
            android:onClick="onClickAnswer"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:fontFamily="@font/second_font"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFour"
            android:layout_margin="8dp"
            android:background="@drawable/btn_ans_four"
            android:tag="3"
            android:onClick="onClickAnswer"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:fontFamily="@font/second_font"
            android:textSize="18sp"/>
    </androidx.gridlayout.widget.GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/btn_back_background"
        android:onClick="toMainMenu"
        android:fontFamily="@font/first_font"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/first_font"
        android:textStyle="bold"
        android:padding="5dp"
        android:background="@drawable/btn_back_background"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/first_font"
        android:textStyle="bold"
        android:padding="5dp"
        android:background="@drawable/btn_back_background"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvPoints"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>